[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/ship.png" type="Texture" id=1]
[ext_resource path="res://prefabs/ui/game/ship_movement/ship_movement.gd" type="Script" id=2]

[node name="ShipMovement" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Changes" type="VBoxContainer" parent="."]
margin_right = 902.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combat" type="HBoxContainer" parent="Changes"]
margin_right = 902.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Changes/Combat"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )
text = "C"

[node name="TextureRect" type="TextureRect" parent="Changes/Combat"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="BtnDecrease" type="Button" parent="Changes/Combat"]
margin_left = 52.0
margin_right = 69.0
margin_bottom = 24.0
text = "-"

[node name="LblChanges" type="Label" parent="Changes/Combat"]
margin_left = 73.0
margin_top = 5.0
margin_right = 878.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = "999 / 999"
align = 1

[node name="BtnIncrease" type="Button" parent="Changes/Combat"]
margin_left = 882.0
margin_right = 902.0
margin_bottom = 24.0
text = "+"

[node name="Explorer" type="HBoxContainer" parent="Changes"]
margin_top = 28.0
margin_right = 902.0
margin_bottom = 52.0

[node name="Label2" type="Label" parent="Changes/Explorer"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )
text = "E"

[node name="TextureRect" type="TextureRect" parent="Changes/Explorer"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="BtnDecrease" type="Button" parent="Changes/Explorer"]
margin_left = 52.0
margin_right = 69.0
margin_bottom = 24.0
text = "-"

[node name="LblChanges" type="Label" parent="Changes/Explorer"]
margin_left = 73.0
margin_top = 5.0
margin_right = 878.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = "999 / 999"
align = 1

[node name="BtnIncrease" type="Button" parent="Changes/Explorer"]
margin_left = 882.0
margin_right = 902.0
margin_bottom = 24.0
text = "+"

[node name="Miner" type="HBoxContainer" parent="Changes"]
margin_top = 56.0
margin_right = 902.0
margin_bottom = 80.0

[node name="Label3" type="Label" parent="Changes/Miner"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )
text = "M"

[node name="TextureRect" type="TextureRect" parent="Changes/Miner"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="BtnDecrease" type="Button" parent="Changes/Miner"]
margin_left = 52.0
margin_right = 69.0
margin_bottom = 24.0
text = "-"

[node name="LblChanges" type="Label" parent="Changes/Miner"]
margin_left = 73.0
margin_top = 5.0
margin_right = 878.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = "999 / 999"
align = 1

[node name="BtnIncrease" type="Button" parent="Changes/Miner"]
margin_left = 882.0
margin_right = 902.0
margin_bottom = 24.0
text = "+"

[node name="Transport" type="HBoxContainer" parent="Changes"]
margin_top = 84.0
margin_right = 902.0
margin_bottom = 108.0

[node name="Label4" type="Label" parent="Changes/Transport"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )
text = "T"

[node name="TextureRect" type="TextureRect" parent="Changes/Transport"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="BtnDecrease" type="Button" parent="Changes/Transport"]
margin_left = 52.0
margin_right = 69.0
margin_bottom = 24.0
text = "-"

[node name="LblChanges" type="Label" parent="Changes/Transport"]
margin_left = 73.0
margin_top = 5.0
margin_right = 878.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = "999 / 999"
align = 1

[node name="BtnIncrease" type="Button" parent="Changes/Transport"]
margin_left = 882.0
margin_right = 902.0
margin_bottom = 24.0
text = "+"

[node name="Actions" type="VBoxContainer" parent="."]
margin_left = 906.0
margin_right = 960.0
margin_bottom = 540.0

[node name="BtnConfirmMove" type="Button" parent="Actions"]
margin_right = 54.0
margin_bottom = 20.0
text = "Move"

[node name="BtnCancel" type="Button" parent="Actions"]
margin_top = 24.0
margin_right = 54.0
margin_bottom = 44.0
text = "Cancel"
[connection signal="pressed" from="Actions/BtnConfirmMove" to="." method="_on_confirm_move" flags=3]
[connection signal="pressed" from="Actions/BtnCancel" to="." method="_on_close" flags=3]
